--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper
 !**/src/main/**/build/
 !**/src/test/**/build/
+*.jar
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
